# potter

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: FindMuPDF.cmake  Installing.cmake
example/: CMakeLists.txt
potter/: CMakeLists.txt
potter/include/potter/: DocumentObserver.h  MuPdfProvider.h  Page.h  PixmapProvider.h  PixmapProviderThread.h  PotterWidget.h  Provider.h
potter/src/: DocumentObserver.cpp  MuPdfProvider.cpp  Page.cpp  PixmapProvider.cpp  PixmapProviderThread.cpp  PotterWidget.cpp  Provider.cpp
